feat: add board size options and optimize codes

--- a/index.html
+++ b/index.html
@@ -10,37 +10,44 @@
 
 <body>
     <div id="tic-tac-toe">
-        <div class="span3 new_span">
-            <div class="row">
-                <h1 class="span3">Tic Tac Toe</h1>
-                <div class="span3">
-                    <div class="input-prepend input-append">
-                        <span class="add-on win_text">O won</span><strong id="o_win"
-                            class="win_times add-on">0</strong><span class="add-on">time(s)</span>
-                    </div>
-                    <div class="input-prepend input-append">
-                        <span class="add-on win_text">X won</span><strong id="x_win"
-                            class="win_times add-on">0</strong><span class="add-on">time(s)</span>
-                    </div>
+        <div class="row container">
+            <h1 class="span3">Tic Tac Toe</h1>
+            <div class="span3">
+                <div class="input-prepend input-append">
+                    <span class="add-on win_text">O won</span>
+                    <strong id="o_win" class="win_times add-on">0</strong>
+                    <span class="add-on">time(s)</span>
+                </div>
+                <div class="input-prepend input-append">
+                    <span class="add-on win_text">X won</span>
+                    <strong id="x_win" class="win_times add-on">0</strong>
+                    <span class="add-on">time(s)</span>
                 </div>
             </div>
-            <ul class="row" id="game">
-                <li id="one" class="btn span1">+</li>
-                <li id="two" class="btn span1">+</li>
-                <li id="three" class="btn span1">+</li>
-                <li id="four" class="btn span1">+</li>
-                <li id="five" class="btn span1">+</li>
-                <li id="six" class="btn span1">+</li>
-                <li id="seven" class="btn span1">+</li>
-                <li id="eight" class="btn span1">+</li>
-                <li id="nine" class="btn span1">+</li>
-            </ul>
-            <div class="clr">&nbsp;</div>
-            <div class="row"><a href="#" id="reset" class="btn-success btn span3">Restart</a></div>
+
+            <div class="new_span" style="display: flex; margin-left: 20px;">
+                <div style="display: flex; justify-content: space-between; align-items: baseline; width: 100%;">
+                    <div>Board Size</div>
+                    <select name="board_size" id="board_size" style="width: 80px;">
+                        <option value="3">3x3</option>
+                        <option value="6">6x6</option>
+                        <option value="9">9x9</option>
+                    </select>
+                    <button id="btnApply">Apply</button>
+                </div>
+            </div>
+    
+            <a href="#" id="reset" class="btn-success btn span3">Restart</a>
+        </div>
+
+        <div class="container board">
+            <div id="game"></div>
         </div>
     </div>
+
 
     <script src='https://code.jquery.com/jquery-1.7.2.min.js'></script>
     <script src="js/index.js"></script>
 </body>
+
 </html>
